objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Finalised</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Common Ground</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assistance</fullName>
        </values>
        <values>
            <fullName>Finalised</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Abuse_Description__c</fullName>
        <label>Abuse Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Abuse_Frequency__c</fullName>
        <description>If the answer was yes to any of the above questions, how often did this happen?</description>
        <inlineHelpText>If the answer was yes to any of the above questions, how often did this happen?</inlineHelpText>
        <label>Abuse Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abused_Threatened_Infront_of_Children__c</fullName>
        <description>Has the abuser ever threatened to, or, harmed the animal(s) in front of the children?</description>
        <inlineHelpText>Has the abuser ever threatened to, or, harmed the animal(s) in front of the children?</inlineHelpText>
        <label>Abuser Threatened in front of Children</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_to_Fire_Arms__c</fullName>
        <label>Access to Fire Arms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adoption_Date__c</fullName>
        <formula>Animal__r.Adoption_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adoption Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agrees_to_desex_microchip_vaccinate__c</fullName>
        <inlineHelpText>Does the owner agree to desexing/microchipping/vaccination (as appropriate)?</inlineHelpText>
        <label>Agrees to desex/microchip/vaccinate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animal_Consequence_with_no_help__c</fullName>
        <label>Animal impact with no help</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Animal_Current_Location__c</fullName>
        <label>Animal Current Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Home</fullName>
                </value>
                <value>
                    <fullName>Shelter</fullName>
                </value>
                <value>
                    <fullName>Friends or Family</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animal_Mistreatment__c</fullName>
        <label>Animal Mistreatment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hitting / Kicking / Striking / Punching / Throwing</fullName>
                </value>
                <value>
                    <fullName>Leave outside in extreme heat/cold</fullName>
                </value>
                <value>
                    <fullName>Giving animal illegal drugs/alcohol</fullName>
                </value>
                <value>
                    <fullName>Food/water deprivation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animal_Requires_Urgent_Vet_Attention__c</fullName>
        <label>Animal Requires Urgent Vet Attention</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animal_Type__c</fullName>
        <formula>TEXT(Animal__r.Animal_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Animal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Animal</label>
        <referenceTo>Animal__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistance_Client_is_Seeking__c</fullName>
        <label>Assistance Client is Seeking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistance_Required__c</fullName>
        <label>Assistance Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boarding</fullName>
                </value>
                <value>
                    <fullName>Financial Vet Assistance</fullName>
                </value>
                <value>
                    <fullName>Home Visit</fullName>
                </value>
                <value>
                    <fullName>Impound</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pet Care Supplies</fullName>
                </value>
                <value>
                    <fullName>Preventative Care</fullName>
                </value>
                <value>
                    <fullName>Surrender</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Vet Visit - Non Urgent</fullName>
                </value>
                <value>
                    <fullName>Vet Visit - Urgent</fullName>
                </value>
                <value>
                    <fullName>Volunteer Assistance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>IF(
	ISBLANK(ClosedDate),
	TODAY () - DATEVALUE(CreatedDate),
	DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Enquiry_Type__c</fullName>
        <label>Case Enquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Someone else</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checked_Sheltermate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked alleged perpetration on Sheltermate</description>
        <inlineHelpText>Checked alleged perpetration on Sheltermate</inlineHelpText>
        <label>Checked Sheltermate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Children_Threatened_Pet__c</fullName>
        <description>If yes have the children who witnessed this ever threatened, injured, or killed a pet or other animal?</description>
        <inlineHelpText>If yes have the children who witnessed this ever threatened, injured, or killed a pet or other animal?</inlineHelpText>
        <label>Children Threatened Pet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Circumstances_Require_Vet_Assistance__c</fullName>
        <inlineHelpText>Under what circumstance do you need emergency vet assistance?</inlineHelpText>
        <label>Circumstances Require Vet Assistance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Capacity__c</fullName>
        <label>Client Capacity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_In_Care__c</fullName>
        <formula>Today() -  In_Care_Date__c</formula>
        <label>Days In Care</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_You_Have_Children__c</fullName>
        <label>Do You Have Children</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Type__c</fullName>
        <label>Emergency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>House Fire Flood</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Natural Disaster</fullName>
                </value>
                <value>
                    <fullName>Witness Protection</fullName>
                </value>
                <value>
                    <fullName>Respite Care</fullName>
                </value>
                <value>
                    <fullName>Hoarding Squalor</fullName>
                </value>
                <value>
                    <fullName>Rehab</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Examination__c</fullName>
        <label>Examination</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fear_Caused_Delay_Calling_Police__c</fullName>
        <description>Has fear that the abuser will harm your animal(s) ever caused you to delay calling the police for help?</description>
        <inlineHelpText>Has fear that the abuser will harm your animal(s) ever caused you to delay calling the police for help?</inlineHelpText>
        <label>Fear Caused Delay Calling Police</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fear_Caused_Delay_Seeking_Refuge__c</fullName>
        <description>Has fear that the abuser will harm your animal(s) ever caused you to delay going to a refuge or other safe place away from your partner?</description>
        <inlineHelpText>Has fear that the abuser will harm your animal(s) ever caused you to delay going to a refuge or other safe place away from your partner?</inlineHelpText>
        <label>Fear Caused Delay Seeking Refuge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Agreement_Date__c</fullName>
        <label>Financial Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Agreement_Details__c</fullName>
        <label>Financial Agreement Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Finding_Accommodation_Prevented_Delayed__c</fullName>
        <inlineHelpText>Has caring for the animal prevented/delayed the individual from finding safe accommodation for themselves?</inlineHelpText>
        <label>Finding Accommodation Prevented/Delayed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Program_Engagement_Date__c</fullName>
        <label>First Program Engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Friend_or_Family_Member_Care__c</fullName>
        <description>Is there a friend or family member that could care for the animal as an alternative to housing the animal in a shelter?</description>
        <inlineHelpText>Is there a friend or family member that could care for the animal as an alternative to housing the animal in a shelter?</inlineHelpText>
        <label>Friend or Family Member Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friends_and_Family_Details__c</fullName>
        <label>Friends and Family Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>History__c</fullName>
        <label>History</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_Many_Children__c</fullName>
        <description>How many children do you have?</description>
        <inlineHelpText>How many children do you have?</inlineHelpText>
        <label>How Many Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_Many_Children_and_Age_s__c</fullName>
        <label>How Many Children and Age(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Prevented_Delayed_by_how_long__c</fullName>
        <label>If Prevented/Delayed by how long</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Unable_to_Assist_Animal__c</fullName>
        <inlineHelpText>What would happen to the animal if we are unable to assist?</inlineHelpText>
        <label>If Unable to Assist Animal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Care_Date__c</fullName>
        <label>In Care Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Program_Engagement_Date__c</fullName>
        <label>Last Program Engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Claim_to_Animals__c</fullName>
        <label>Legal Claim to Animals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_Required_in_Animal_Boarding__c</fullName>
        <label>Length Required in Animal Boarding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Week</fullName>
                </value>
                <value>
                    <fullName>2 Weeks</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Long_Term_Accommodation_Plans_for_Pet__c</fullName>
        <inlineHelpText>What plans does the client have for gaining long term accommodation that is suitable for their pet/s?</inlineHelpText>
        <label>Long Term Accommodation Plans for Pet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>One_Drive_Folder_Name__c</fullName>
        <formula>CaseNumber + &apos;_dev&apos;</formula>
        <label>One Drive Folder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perpetrator_Likely_to_Look__c</fullName>
        <description>Is the alleged perpetrator likely to come looking for the animal/s?</description>
        <inlineHelpText>Is the alleged perpetrator likely to come looking for the animal/s?</inlineHelpText>
        <label>Perpetrator Likely to Look</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perpetrator_Name__c</fullName>
        <label>Perpetrator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perpetrator_Residence__c</fullName>
        <label>Perpetrator Residence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Engagement_Count_This_Year__c</fullName>
        <label>Program Engagement Count This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Perpetrator__c</fullName>
        <label>Relationship to Perpetrator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Husband</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Neighbour</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Wife</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Safe_Address__c</fullName>
        <label>Safe Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Safe_Retrieval_Plan__c</fullName>
        <description>If not with the client is there a safe retrieval plan for the animal/s?</description>
        <inlineHelpText>If not with the client is there a safe retrieval plan for the animal/s?</inlineHelpText>
        <label>Safe Retrieval Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Delivery_Amount_This_Year__c</fullName>
        <label>Service Delivery Amount This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Session</label>
        <referenceTo>pmdm__ServiceSession__c</referenceTo>
        <relationshipLabel>Outbound Referrals</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <formula>TEXT(Animal__r.Sex__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shelter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shelter</label>
        <referenceTo>Shelter__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <label>Special Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suitable_for_Foster_Care__c</fullName>
        <label>Suitable for Foster Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threatened_to_Hurt_Animal__c</fullName>
        <label>Threatened to Hurt Animal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threatened_to_Kill_Animal__c</fullName>
        <label>Threatened to Kill Animal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Program_Engagement__c</fullName>
        <label>Total Program Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Service_Delivery_Amount__c</fullName>
        <label>Total Service Delivery Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Service_Outstanding_Amount__c</fullName>
        <label>Total Service Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transport_Animal_to_Vet__c</fullName>
        <label>Transport Animal to Vet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <label>Treatment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Trustee_Guardian_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trustee/Guardian Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Trustee/Guardian Name)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Under_Trustee_Guardian__c</fullName>
        <label>Under Trustee &amp; Guardian</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vet_History_Obtained__c</fullName>
        <label>Vet History Obtained</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vet Treatments</relationshipLabel>
        <relationshipName>Vet_Treatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Access_To_Vet_Care_Intake</fullName>
        <active>false</active>
        <businessProcess>Case Management</businessProcess>
        <label>Access To Vet Care Intake</label>
    </recordTypes>
    <recordTypes>
        <fullName>Aged_Care</fullName>
        <active>false</active>
        <businessProcess>Case Management</businessProcess>
        <label>Aged Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Domestic_Violence</fullName>
        <active>false</active>
        <businessProcess>Case Management</businessProcess>
        <label>Domestic Violence</label>
    </recordTypes>
    <recordTypes>
        <fullName>Emergency_Boarding</fullName>
        <active>false</active>
        <businessProcess>Case Management</businessProcess>
        <label>Emergency Boarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Homelessness</fullName>
        <active>false</active>
        <businessProcess>Case Management</businessProcess>
        <label>Homelessness</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Case_Enquiry_Self</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 ISPICKVAL (Case_Enquiry_Type__c, &quot;Self&quot;),
ISBLANK ( ContactId )
)</errorConditionFormula>
        <errorDisplayField>ContactId</errorDisplayField>
        <errorMessage>The caller is making an enquiring for themselves, please enter their name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Enquiry_Someone_Else</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
ISPICKVAL (Case_Enquiry_Type__c, &quot;Someone else&quot;),
OR (
ISBLANK (  caseman__ReferralOrganization__c),
ISBLANK ( caseman__ReferralOrganizationContact__c )
)
)</errorConditionFormula>
        <errorMessage>The caller is making an enquiring for someone else, please enter the name of the Referral Organisation or Contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Finding_Accommodation_Prevented_Delayed</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 ISPICKVAL( Finding_Accommodation_Prevented_Delayed__c , &quot;Yes&quot;),
 ISBLANK( If_Prevented_Delayed_by_how_long__c )  
)</errorConditionFormula>
        <errorDisplayField>If_Prevented_Delayed_by_how_long__c</errorDisplayField>
        <errorMessage>Indicate the length that it was prevented/delayed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Have_Children</fullName>
        <active>true</active>
        <description>If Client have children, they must specify number of children and their age(s)</description>
        <errorConditionFormula>AND( 
ISPICKVAL( Do_You_Have_Children__c , &quot;Yes&quot;),
ISBLANK( How_Many_Children_and_Age_s__c)
)</errorConditionFormula>
        <errorDisplayField>How_Many_Children_and_Age_s__c</errorDisplayField>
        <errorMessage>Please add the number of children and their age(s)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Trustee_And_Guardian_Mandatory</fullName>
        <active>true</active>
        <description>If Trustee &amp; Guardian = Yes then Trustee &amp; Guardian Name</description>
        <errorConditionFormula>AND (
ISPICKVAL(Under_Trustee_Guardian__c, &quot;Yes&quot;), 
ISBLANK( Trustee_Guardian_Name__c )
)</errorConditionFormula>
        <errorDisplayField>Trustee_Guardian_Name__c</errorDisplayField>
        <errorMessage>Please add the Trustee &amp; Guardian Name by selecting an existing or creating a new contact</errorMessage>
    </validationRules>
</CustomObject>